<resources>
    <string name="app_name">Calorie Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="calorie_goal_today">0</string>
    <string name="button_edit">Edit</string>
    <string name="button_ok">OK</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Signup</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="activity_level">Activity Level</string>
    <string name="steps_per_mile">Steps Per Mile</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="category">Category</string>
    <string name="food">Food</string>
    <string name="quantity">Quantity</string>
    <string name="button_add">Add</string>
    <string name="serving">Serving</string>
    <string name="show_password">Show Password</string>
    <string name="button_find_food">Find More Food</string>
    <string name="search_food_hint">Search new food here...</string>
    <string name="steps">Enter your steps here...</string>
    <string name="bar_button">Bar Chart</string>
    <string name="pie_button">Pie Chart</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="button_search">Search</string>


    <string name="signup_success">Signup succeeded!</string>
    <string name="add_consumption_success">Consumption added!</string>
    <string name="add_step_success">Steps added!</string>
    <string name="update_step_success">Steps updated!</string>
    <string name="add_report_success">Report added!</string>

    <string name="login_error">Username or Password is incorrect!</string>
    <string name="login_error_empty_username">Username is empty!</string>
    <string name="login_error_empty_password">Password is empty!</string>
    <string name="signup_error_empty_firstname">First Name is empty!</string>
    <string name="signup_error_empty_lastname">Last Name is empty!</string>
    <string name="signup_error_empty_email">Email is empty!</string>
    <string name="signup_error_invalid_email">Email is invalid!</string>
    <string name="signup_error_empty_password">Password is empty!</string>
    <string name="signup_error_unmatch_password">Password doesn\'t match!</string>
    <string name="signup_error_empty_dob">Date of Birth is empty!</string>
    <string name="signup_error_empty_height">Height is empty!</string>
    <string name="signup_error_empty_weight">Weight is empty!</string>
    <string name="signup_error_empty_gender">Gender isn\'t selected!</string>
    <string name="signup_error_empty_steps">Steps is empty!</string>
    <string name="signup_error_empty_address">Address is empty!</string>
    <string name="signup_error_empty_postcode">Postcode is empty!</string>
    <string name="signup_error_empty_username">Username is empty!</string>
    <string name="signup_error_exist_username">Username exists!</string>
    <string name="signup_error_exist_email">Email exists!</string>
    <string name="add_food_error_empty_qty">Quantity is empty!</string>
    <string name="add_step_error_empty_num">Steps is empty!</string>
    <string name="report_error_empty_date">Date is empty!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_searchable">SearchableActivity</string>
</resources>
