<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <SearchView
        android:id="@+id/search_new_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_food_hint"/>

    <ImageView
        android:id="@+id/food_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_new_food"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_img"
        android:layout_marginTop="16dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/food_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_name"
        android:layout_marginTop="16dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/food_serving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_category"
        android:layout_marginTop="16dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/food_calorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_serving"
        android:layout_marginTop="16dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/food_fat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_calorie"
        android:layout_marginTop="16dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/food_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_fat"
        android:layout_marginTop="16dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/food_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_description"
        android:layout_marginTop="16dp"
        android:hint="@string/quantity"
        android:inputType="number"
        android:textSize="18sp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/food_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/food_quantity"
        android:text="@string/button_add"
        android:visibility="invisible"/>


    <!--<ListView-->
        <!--android:id="@+id/food_list_view"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_below="@+id/search_new_food"/>-->

</RelativeLayout>